GNOME Bugzilla – Bug 704691
input-selector: active pad not notified
Last modified: 2013-07-23 06:59:27 UTC
Created attachment 249817 [details] [review] input-selector: fix missing pad activation notification A new active pad might not be notified in some cases, which results in the current track number not being set in playbin. The active-pad notification is only sent in the chain and sink_event functions, and only when the buffer or event that triggered the active pad selection is from the newly activated pad. So in the other case the notification will never be sent. For example: <inputselector2:sink_1> received event stream-start event: ... <inputselector2> Activating pad inputselector2:sink_0 <inputselector2:sink_0> received event stream-start event: ...
commit 9bc26c5f25b9a581c1add0c457f0646cb6e3c8cf Author: Arnaud Vrac <avrac@freebox.fr> Date: Mon Jul 22 18:03:01 2013 +0200 input-selector: Fix missing pad activation notification A new active pad might not be notified in some cases, which results in the current track number not being set in playbin. The active-pad notification is only sent in the chain and sink_event functions, and only when the buffer or event that triggered the active pad selection is from the newly activated pad. So in the other case the notification will never be sent. https://bugzilla.gnome.org/show_bug.cgi?id=704691